--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,13 @@
   height: 100vh;
 }
 .header .vegas-slide {
-  filter: brightness(65%) grayscale(55%);
+  filter: brightness(95%) grayscale(5%);
+}
+@media (max-width: 426px) {
+  .header .vegas-slide .vegas-video {
+    -o-object-position: 46% 0%;
+       object-position: 46% 0%;
+  }
 }
 .header .navigation-list {
   text-shadow: 0px 0px 5px #0f0f0f;
@@ -84,6 +90,7 @@
   font-size: 5.7rem;
   line-height: 1rem;
   font-family: "Bebas Neue", cursive;
+  text-shadow: 0 0 10px black;
 }
 @media (max-width: 426px) {
   .header .cta .cta-heading {
@@ -95,6 +102,7 @@
   font-weight: 100;
   font-size: 3rem;
   line-height: 6rem;
+  text-shadow: 0 0 10px black;
 }
 @media (max-width: 426px) {
   .header .cta .cta-subheading {
@@ -1421,26 +1429,26 @@
 .header-contact .banner-single:nth-child(1) {
   background: linear-gradient(-45deg, #92f4ff, #23a6d5, #23d5ab);
   background-size: 400% 400%;
-  -webkit-animation: gradient 4s ease infinite;
-          animation: gradient 4s ease infinite;
+  -webkit-animation: gradient 5s ease infinite;
+          animation: gradient 5s ease infinite;
 }
 .header-contact .banner-single:nth-child(2) {
   background: linear-gradient(30deg, #53d3d1, #2eacda, #23d5ab);
   background-size: 400% 400%;
-  -webkit-animation: gradient 4s ease infinite;
-          animation: gradient 4s ease infinite;
+  -webkit-animation: gradient 2s ease infinite;
+          animation: gradient 2s ease infinite;
 }
 .header-contact .banner-single:nth-child(3) {
   background: linear-gradient(183deg, #23d5ab, #23a6d5, #23d5ab);
   background-size: 400% 400%;
-  -webkit-animation: gradient 4s ease infinite;
-          animation: gradient 4s ease infinite;
+  -webkit-animation: gradient 7s ease infinite;
+          animation: gradient 7s ease infinite;
 }
 .header-contact .banner-single:nth-child(4) {
   background: linear-gradient(301deg, #92f4ff, #23a6d5, #23d5ab);
   background-size: 400% 400%;
-  -webkit-animation: gradient 4s ease infinite;
-          animation: gradient 4s ease infinite;
+  -webkit-animation: gradient 3s ease infinite;
+          animation: gradient 3s ease infinite;
 }
 .header-contact .contact-overtitle {
   color: #545454;
