--- a/resources/sass/pages/homepage/home.scss
+++ b/resources/sass/pages/homepage/home.scss
@@ -2,7 +2,13 @@
     height: 100vh;
 
     .vegas-slide {
-        filter: brightness(65%) grayscale(55%);
+        filter: brightness(95%) grayscale(5%);
+
+        @include mobile() {
+            .vegas-video {
+                object-position: 46% 0%;
+            }
+        }
     }
 
     @include nav;
@@ -23,6 +29,7 @@
             font-size: 5.7rem;
             line-height: 1rem;
             font-family: $styled-text;
+            text-shadow: 0 0 10px black;
 
             @include mobile() {
                 font-size: 4.2rem;
@@ -34,6 +41,7 @@
             font-weight: 100;
             font-size: 3rem;
             line-height: 6rem;
+            text-shadow: 0 0 10px black;
 
             @include mobile() {
                 font-size: 2.2rem;
